--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
@@ -59,7 +59,23 @@ The key tasks are as follows:
 <summary>Expland this section to view the solution</summary>
 
 - The steps to generate vector embeddings for query text using the ContosoSuitesWebAPI's `/Vectorize` endpoint are as follows:
-  - In Visual Studio Code, navigate to the `src\ContosoSuitesWebAPI` project in the explorer pane on the left-hand side, then locate and open the `appsettings.development.json` file.
+  - In Visual Studio Code, navigate to the `src\ContosoSuitesWebAPI` project in the explorer pane on the left-hand side, then locate and open the `appsettings.development.json` file. The file should look similar to the following:
+
+    ```json
+    "AzureOpenAI": {
+        "Endpoint": "[YOUR_AZURE_OPENAI_ENDPOINT]",
+        "ApiKey": "[YOUR_AZURE_OPENAI_KEY]",
+        "DeploymentName": "gpt-4o",
+        "EmbeddingDeploymentName": "text-embedding-ada-002"
+    },
+    "CosmosDB": {
+        "ConnectionString": "[YOUR_COSMOS_DB_CONNECTION_STRING]",
+        "DatabaseName": "ContosoSuites",
+        "MaintenanceRequestsContainerName": "MaintenanceRequests"
+    },
+    "SQLCONNSTR_ContosoSuites": "[YOUR_AZURE_SQL_DB_CONNECTION_STRING]"
+    ```
+
   - In the `appsettings.development.json` file, update the settings to provide your Cosmos DB connection string and your Azure OpenAI endpoint and key. Note, the deployment name is preset, but if it differs in your environment, this will need to be set to the value you configured.
   - Save the `appsettings.development.json` file.
   - In Visual Studio Code, open a new terminal window and change the directory to `scr\ContotoSuitesWebAPI`.
@@ -203,7 +219,7 @@ The key tasks are as follows:
 
   - Test your completed code by opening a new terminal window in Visual Studio Code, navigating to the `src\ContosoSuitesDashboard` folder, and running the following command to start the Streamlit dashboard:
 
-    ```python
+    ```bash
     python -m streamlit run Index.py
     ```
 
