--- a/docs/05_enhance_api_with_semantic_kernel/0501.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0501.md
@@ -110,7 +110,7 @@ The key tasks are as follows:
         var embeddings = await _kernel.GetRequiredService<ITextEmbeddingGenerationService>().GenerateEmbeddingAsync(text);
         ```
 
-    - As you did in the `Program.cs` class, you must supress the issue with the `ITextEmbeddingGenerationService` feature to use it in this class. The final code with look similar to the following:
+    - As you did in the `Program.cs` class, you must supress the issue with the `ITextEmbeddingGenerationService` feature using `# pragma` directives to use it in this class. The final code with look similar to the following:
 
         ```csharp
         #pragma warning disable SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
