Exercise 5 task 2 updates

--- a/docs/05_enhance_api_with_semantic_kernel/0502.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0502.md
@@ -88,7 +88,7 @@ The key tasks are as follows:
 - To configure the maintenance request and database plugins:
   - In Visual Studio Code, open the `Plugins\MaintenanceRequestPlugin.cs` file in the `ContosoSuitesWebAPI` project.
   - Complete `Exercise 5 Task 2 TODO #5` by add a reference to the `Microsoft.SemanticKernel` library at the top of the file, along with the other `using` statements.
-  - Complete `Exercise 5 Task 2 TODO #6` and `#7` by adding Kernel function and Description descriptors of the `CreateMaintenanceRequest` and `SaveMaintenanceRequest` functions. The descriptors for each should look like:
+  - Complete `Exercise 5 Task 2 TODO #s 6 and 8` by adding Kernel function and Description descriptors of the `CreateMaintenanceRequest` and `SaveMaintenanceRequest` functions. The descriptors for each should look like:
     - For the `CreateMaintenanceRequest` function:
 
         ```csharp
@@ -103,7 +103,20 @@ The key tasks are as follows:
         [Description("Saves a maintenance request to the database for a hotel.")]
         ```
 
-    - Save the `MaintenanceRequestPlugin` file.
+  - Complete `Exercise 5 Task 2 TODO #s 7 and 9` by adding a `Kernel` parameter to the beginning of both function method declarations.
+    - For the `CreateMaintenanceRequest` function, add `Kernel kernel` as the first parameter:
+
+        ```csharp
+        public async Task<MaintenanceRequest> CreateMaintenanceRequest(Kernel kernel, int HotelId, string Hotel, string Details, int? RoomNumber, string? location)
+        ```
+
+    - For the `SaveMaintenanceRequest` function, add `Kernel kernel` as the first parameter:
+
+        ```csharp
+        public async Task SaveMaintenanceRequest(Kernel kernel, MaintenanceRequest maintenanceRequest)
+        ```
+
+  - Save the `MaintenanceRequestPlugin` file.
   - Once you've defined your plugin, you msut add it to your kernel by creating a new instance of the plugin and adding it to the kernel's plugin collection.
     - Open the `Program.cs` file in the `ContosoSuitesWebAPI` project.
     - In the `Kernel` singleton service `builder`, add the following code to define a plugin from the `MaintenanceRequestPlugin` type. This can be added directly below the plugin defintion for the `DatabaseService`.
@@ -170,7 +183,7 @@ The key tasks are as follows:
 
 - To enable the `/MaintenanceCopilotChat` endpoint on the API:
   - In the `Program.cs` file in the `src\ContosoSuitesWebAPI` project and locate the `app.MapPost("/MaintenanceCopilotChat", async ([FromBody]string message, [FromServices] MaintenanceCopilot copilot)` API endpoint definition.
-  - Complete `Exercise 5 Task 2 TODO #8` by calling the `Chat` method of the `MaintenanceCopilot`, passing in the user message from the request body. Return the response from the `Chat` method. The code in the API method should look like:
+  - Complete `Exercise 5 Task 2 TODO #10` by calling the `Chat` method of the `MaintenanceCopilot`, passing in the user message from the request body. Return the response from the `Chat` method. The code in the API method should look like:
 
     ```csharp
     var response = await copilot.Chat(message);
@@ -180,7 +193,7 @@ The key tasks are as follows:
     Make sure to remove the `throw new NotImplementedException();` line, or you will get an error when that line is hit.
 
 - To configure the **Chat Copilot** page as a conversational app in the Streamlit dashboard:
-  - Complete `Exercise 5 Task 2 TODO #9` by setting `response` equal to the response from a POST request to the Copilot endpoint. The timeout should be set to 60 seconds or longer. The call should look like:
+  - Complete `Exercise 5 Task 2 TODO #11` by setting `response` equal to the response from a POST request to the Copilot endpoint. The timeout should be set to 60 seconds or longer. The call should look like:
 
     ```python
     response = requests.post(f"{api_endpoint}/MaintenanceCopilotChat", json=message, timeout=60)
