--- a/docs/05_enhance_api_with_semantic_kernel/0502.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0502.md
@@ -117,7 +117,7 @@ The key tasks are as follows:
       ```
 
   - Save the `MaintenanceRequestPlugin` file.
-  - Once you've defined your plugin, you msut add it to your kernel by creating a new instance of the plugin and adding it to the kernel's plugin collection.
+  - Once you've defined your plugin, you must add it to your kernel by creating a new instance of the plugin and adding it to the kernel's plugin collection.
     - Open the `Program.cs` file in the `ContosoSuitesWebAPI` project.
     - In the `Kernel` singleton service `builder`, add the following code to define a plugin from the `MaintenanceRequestPlugin` type. This can be added directly below the plugin defintion for the `DatabaseService`.
 
