Updates based on alpha run

--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -47,6 +47,10 @@ The key tasks are as follows:
     > **Important**: Abstractive summarization in the Azure AI Services Language service is only supported in a subset of regions. You must create your Azure AI Language service in one of the [supported regions](https://learn.microsoft.com/azure/ai-services/language-service/summarization/region-support) to allow abstractive summarization to be performed in a later exercise.
 
 7. Open the `DeployAzureResources.bicep` script in the `src/InfrastructureAsCode/` folder and change the value of **sqlAdminPassword** if you desire to have a password other than the default in the deployment script.
+
+    {: .note }
+    > In this lab, you will use a variety of passwords and API keys for the sake of simplicity. In a production environment, you should instead make use of managed identities over passwords or keys whenever possible.
+
 8. Use the `DeployAzureResources.bicep` script in the `src/InfrastructureAsCode/` folder to deploy resources out.
 
     {: .note }
