--- a/docs/02_implement_function_calls/0202.md
+++ b/docs/02_implement_function_calls/0202.md
@@ -22,7 +22,7 @@ The key tasks are as follows:
 3. Add the Semantic Kernel NuGet package to the Web API project.
 
     {: .important }
-    > You will need a version of Semantic Kernel that supports Azure.AI.OpenAI version 2. Semantic Kernel 1.17.2 only supports version 1 of the library, so you will need to use 1.18 or later. As of the time of writing, [the latest version of Semantic Kernel](https://www.nuget.org/packages/Microsoft.SemanticKernel/) is 1.18.1-rc so be sure to install that version or later.
+    > You will need a version of Semantic Kernel that supports Azure.AI.OpenAI version 2. Semantic Kernel 1.17.2 only supports version 1 of the library, so you will need to use 1.18 or later. As of the time of writing, [the latest version of Semantic Kernel](https://www.nuget.org/packages/Microsoft.SemanticKernel/) will be sufficient.
 
 4. Tag each of the methods in the `DatabaseService` class as kernel functions and provide a description for each method and input parameter.
 5. The `AppConfig.cs` file contains a simple configuration class. Update the `Program.cs` file to use this configuration class to build out a configuration. Add in any user secrets associated with the (implicit) `Program` class as well as environment variables, and then validate the configuration.
@@ -181,11 +181,8 @@ The key tasks are as follows:
 - To add the Semantic Kernel NuGet package, you can run the following command from the command line, in the Web API directory containing your `ContosoSuitesWebAPI.csproj` file.
 
   ```powershell
-  dotnet add package Microsoft.SemanticKernel --version 1.18.1-rc
+  dotnet add package Microsoft.SemanticKernel
   ```
-  
-  {: .important }
-  > This example specifies a pre-release version of [the Semantic Kernel package](https://www.nuget.org/packages/Microsoft.SemanticKernel/). Once version 1.18 or later has reached a stable   state, you will not need to specify the version.
 
 - In order to tag a method in the `DatabaseService.cs` file, you will need to include the `Microsoft.SemanticKernel` and `System.ComponentModel` namespaces at the top of the file, along with the other **using** statements.
 
