Updates to E1T2 for Codespaces

--- a/docs/01_deploy_app_resources/0102.md
+++ b/docs/01_deploy_app_resources/0102.md
@@ -30,6 +30,9 @@ The key tasks are as follows:
       3. How tall is the highest mountain peak in the Alps?
       4. What is the current political situation in Thailand?
 
+    {: .note }
+    > If you are using GitHub Codespaces, select the **Open in Browser** button when you receive an informational message that "Your application running on port 8501 is available."
+
 ## Success Criteria
 
 - You have created an Azure Blob Storage container and uploaded the Resorts and Hotels data files.
@@ -43,11 +46,16 @@ The key tasks are as follows:
 <summary>Expand this section to view the solution for importing data into storage accounts.</summary>
 
 - Make sure you use the storage account you created in exercise 1, as the storage account must be in the same region as Azure AI Search.
+
+One approach to this is as follows:
+
 - Navigate to the storage account in [the Azure portal](https://portal.azure.com).
 - Select the **Containers** option from the **Data storage** menu.
 - Create a new container using the **+ Container** option. Name the container `contoso-suites`.
 - Inside the "contoso-suites" container, select the **Upload** option and choose each text file.
 - The files do not need to be in separate folders in the blob storage container.
+
+Alternatively, you may right-click on each file in Visual Studio Code and select **Upload to Azure Storage...** This is functionality that the Azure Storage extension in Visual Studio Code offers. From there, choose the appropriate storage account and the `contoso-suites` container. If you have not already created the `contoso-suites` container, you will need to do so before uploading the first file. Ensure that the files do get uploaded into the storage account before continuing.
 
 </details>
 
@@ -64,7 +72,7 @@ The key tasks are as follows:
 
     ![Grant Storage Blob Data Reader to the Search service's system identity.](../../media/Solution/0102_AccessControl.png)
 
-- Return to the Search service. Then, select the **Import and vectorize data** menu option.
+- Return to the **Overview** menu option in the Search service. Then, select the **Import and vectorize data** menu option.
 
     ![Select the Import and vectorize data menu option.](../../media/Solution/0102_ImportVectorizeData.png)
 
@@ -168,6 +176,9 @@ The key tasks are as follows:
   ```python
   python -m streamlit run Index.py
   ```
+
+{: .note }
+> If you are using GitHub Codespaces, select the **Open in Browser** button when you receive an informational message that "Your application running on port 8501 is available."
 
 - Navigate to the **Chat with Data** page and then ask each of the following questions in turn. In addition, your answers should be fairly similar to the summarized answers below.
   - Which hotels on the island of Curacao have EV stations?
