Quick changes for E1T3

--- a/docs/01_deploy_app_resources/0103.md
+++ b/docs/01_deploy_app_resources/0103.md
@@ -19,10 +19,10 @@ The key tasks are as follows:
 
 1. Copy the two workflows in `/src/.github/workflows/` into `.github/workflows`, and remove the `jekyll-gh-pages.yml` workflow.
 2. Modify the `api.yml` and `dashboard.yml` workflow files in `.github/workflows`. Replace `{your_registry_name}` with the name of your Azure container registry and `{your_prefix}` with the unique identifier used to create your Azure resources.
-3. Create a new service principal named `TechExcelAzurePaaS` using the following command in the az CLI, being sure to replace `{YOUR SUBSCRIPTION ID}` and `{YOUR RESOURCE GROUP}` with the appropriate values:
+3. Create a new service principal named `TechExcelAzurePaaS` using the following command in the az CLI, being sure to replace `{SUB_ID}` and `{RG}` with your subscription ID and resource group, respectively:
 
     ```cmd
-    az ad sp create-for-rbac --name "TechExcelAzurePaaS" --json-auth --role contributor --scopes /subscriptions/{YOUR SUBSCRIPTION ID}/resourceGroups/{YOUR RESOURCE GROUP}
+    az ad sp create-for-rbac --name "TechExcelAzurePaaS" --json-auth --role contributor --scopes /subscriptions/{SUB_ID}/resourceGroups/{RG}
     ```
 
     Retain the JSON output to use in a GitHub Actions secret.
@@ -33,7 +33,7 @@ The key tasks are as follows:
    4. `ACR_PASSWORD` -- Retrieve from your container registry's **Access keys** menu.
    5. `AZURE_CREDENTIALS` -- Paste in the entirety of the JSON output from running `az ad sp create-for-rbac`.
 5. Commit and push your repository changes.
-6. Manually execute the GitHub Actions workflows named **API Deployment** and **Dashboard Deployment**.
+6. Manually execute the GitHub Actions workflows named **API Deployment** and **Dashboard Deployment** if they do not run automatically.
 7. Connect to your dashboard website and ensure that you can still perform chat with data operations. To test, you can use a question like, "Do I need to pay extra money to use an EV station when I am a guest of the hotel?"
 
     {: .note }
