Quick changes (2) for E1T3

--- a/docs/01_deploy_app_resources/0103.md
+++ b/docs/01_deploy_app_resources/0103.md
@@ -62,10 +62,10 @@ The key tasks are as follows:
 - In [the Azure portal](https://portal.azure.com), navigate to the resource group you have created and select the **Container registry** in the resource group.
 - Navigate to the **Access keys** in the **Settings** menu and make note of your **Login server**, **Username**, and **password**. You will need these for GitHub Actions secrets. Also make note of the **Registry name** in order to modify the GitHub Actions workflows.
 - After copying `api.yml` and `dashboard.yml` into the `.github/workflows` folder, replace any instances of `{your_registry_name}` with the registry name you copied in the prior step. Replace any instances of `{your_prefix}` with the unique identifier for your account. This is a 13-character string and is the first 13 characters of each Azure resource in your resource group.
-- Create a new service principal named `TechExcelAzurePaaS` using the following command in the az CLI, being sure to replace `{YOUR SUBSCRIPTION ID}` and `{YOUR RESOURCE GROUP}` with the appropriate values:
+- Create a new service principal named `TechExcelAzurePaaS` using the following command in the az CLI, being sure to replace `{SUB_ID}` and `{RG}` with your subscription ID and resource group, respectively:
 
   ```cmd
-  az ad sp create-for-rbac --name "TechExcelAzurePaaS" --json-auth --role contributor --scopes /subscriptions/{YOUR SUBSCRIPTION ID}/resourceGroups/{YOUR   RESOURCE GROUP}
+  az ad sp create-for-rbac --name "TechExcelAzurePaaS" --json-auth --role contributor --scopes /subscriptions/{SUB_ID}/resourceGroups/{RG}
   ```
 
     Retain the JSON output to use in a GitHub Actions secret.
