Update E2T1 for Codespaces

--- a/docs/02_implement_function_calls/0201.md
+++ b/docs/02_implement_function_calls/0201.md
@@ -28,10 +28,14 @@ The key tasks are as follows:
 
 4. Complete the function mappings in `src/ContosoSuitesWebAPI/Program.cs` for the `/Hotels/` endpoints. Each endpoint should call the relevant database service and return the results of the appropriate method.
 5. Build and run the Web API service locally. Connect to the URL provided in the **"Now listening on:"** line and navigate to the `/Hotels` endpoint. For example, if your host is localhost and on port 5292, navigate to `http://localhost:5292/Hotels`. You should see a list of four hotels. Test the other two endpoints as well.
+
+    {: .note }
+    > If you are using GitHub Codespaces, select the **Open in Browser** button when you receive an informational message that "Your application running on port 5292 is available." From there, you can navigate to the `/Hotels` endpoint in your browser.
+
 6. Open the Streamlit application and navigate to the **API Integration** page. You should see a drop-down list asking you to select a hotel, followed by a table of bookings for that hotel.
 
     {: .note }
-    > You may need to change the `[api].[endpoint]` key in your `secrets.toml` file to point to your local Web API service, rather than the App Service deployment.
+    > You may need to change the `[api].[endpoint]` key in your `secrets.toml` file to point to your local Web API service, rather than the App Service deployment. If you are using GitHub Codespaces, you should still use `http://localhost:5292` as your API URL.
 
 7. Deploy your App Service code changes and ensure they propagate to Azure App Services. Then, add a new connection string to the App Service's environment variables called `ContosoSuites`. The Value should be the value of your connection string and the Type should be **SQLServer**. Azure App Services will automatically add the `SQLCONNSTR_` so you should not add it yourself when creating this variable.
 8. Test your deployed Streamlit application and ensure that it is able to load the hotels drop-down list and bookings table as expected.
@@ -62,10 +66,20 @@ The key tasks are as follows:
 - If you have a tool such as SQL Server Management Studio or Azure Data Studio already installed, you can connect to your Azure SQL Database via its endpoint--the server name in your SQL connection string. If you do not have a database tool installed, navigate to the **ContosoSuitesBookings** database in your resource group. Then, on the left-hand menu, select the **Query editor (preview)** menu option. Log in with your SQL user name (`contosoadmin` by default) and password. From there, you can paste the contents of `src/data/BookingsHistory.sql` to create the bookings history tables and load them with sample data.
 - Create an environment variable locally, giving it the name `SQLCONNSTR_ContosoSuites`. There are several ways to create an environment variable, including `setx` in the Windows command shell, the `$env` variable in PowerShell, and the **Environment Variables** option in the **Advanced** tab of System Properties.
 
+  To perform this in the GitHub Codespaces bash prompt, you can run the following commands:
+
+  ```bash
+  SQLCONNSTR_ContosoSuites='Server=tcp:{your server}.database.windows.net,1433;Initial Catalog=ContosoSuitesBookings;Persist Security Info=False;User ID=contosoadmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
+  export SQLCONNSTR_ContosoSuites
+  ```
+
+  {: .note }
+  > You will not need to restart your Codespaces instance afterward, though your environment variable will only persist within the context of that terminal window, meaning if you open another terminal session, it will not have knowledge of your environment variable. If you wish to preserve this, you can also add the two commands to the end of your `~/.bashrc` file. That will ensure new terminal sessions also contain the environment variable.
+
   To perform this in PowerShell, you can run the following command:
   
   ```powershell
-  $env:SQLCONNSTR_ContosoSuites = 'Server=tcp:{your server}.database.windows.net,1433;Initial Catalog=ContosoSuitesBookings;Persist Security Info=False;User   ID=contosoadmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
+  $env:SQLCONNSTR_ContosoSuites = 'Server=tcp:{your server}.database.windows.net,1433;Initial Catalog=ContosoSuitesBookings;Persist Security Info=False;User ID=contosoadmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
   ```
   
   Should you wish to create an environment variable using the System Properties user interface, it is possible to do this as well.
@@ -73,7 +87,7 @@ The key tasks are as follows:
   ![Creating a new environment variable in Windows](../../media/Solution/0201_EnvironmentVariable.png)
   
   {: .note }
-  > After creating an environment variable, you will need to close and re-open your terminal to refresh the list of environment variables. If you are using   Visual Studio Code to run this code base, you may need to close and re-open all open instances of VS Code, as instantiating a new terminal might not refresh   the list of environment variables.
+  > After creating an environment variable in Windows, you will need to close and re-open your terminal to refresh the list of environment variables. If you are using   Visual Studio Code to run this code base, you may need to close and re-open all open instances of VS Code, as instantiating a new terminal might not refresh the list of environment variables.
 - The completed code for the three Hotels endpoints in `Program.cs` are as follows:
 
   ```csharp
@@ -101,6 +115,14 @@ The key tasks are as follows:
       .WithName("GetRecentBookingsForHotel")
       .WithOpenApi();
   ```
+
+- To run the .NET Web API application, navigate to the `src/ContosoSuitesWebAPI/` folder in your terminal. This terminal should have access to the `SQLCONNSTR_ContosoSuites` environment variable. Then, run the following commands to restore NuGet packages, build the project, and run the project.
+
+    ```csharp
+    dotnet restore
+    dotnet build
+    dotnet run
+    ```
 
 - In order to create an environment variable for your App Service, perform the following actions.
   - Navigate back to your resource group in the Azure Portal. Then, select the **App Service** named `{your_unique_id}-api`. In the **Settings** menu, choose the **Environment variables** option. Then, navigate to the **Connection strings** tab and select the **Add** button.
