Add note on App Service

--- a/docs/02_implement_function_calls/0201.md
+++ b/docs/02_implement_function_calls/0201.md
@@ -40,6 +40,9 @@ The key tasks are as follows:
 7. Deploy your App Service code changes and ensure they propagate to Azure App Services. Then, add a new connection string to the App Service's environment variables called `ContosoSuites`. The Value should be the value of your connection string and the Type should be **SQLServer**. Azure App Services will automatically add the `SQLCONNSTR_` so you should not add it yourself when creating this variable.
 8. Test your deployed Streamlit application and ensure that it is able to load the hotels drop-down list and bookings table as expected.
 
+    {: .note }
+    > If you receive an error message indicating a timeout against the API server, you may need to stop and restart the API App Service and then wait a couple of minutes for it to be ready.
+
 ## Success Criteria
 
 - You have created a series of tables in the ContosoSuitesBookings Azure SQL Database.
