--- a/docs/02_implement_function_calls/0202.md
+++ b/docs/02_implement_function_calls/0202.md
@@ -28,7 +28,13 @@ The key tasks are as follows:
 5. The `AppConfig.cs` file contains a simple configuration class. Update the `Program.cs` file to use this configuration class to build out a configuration. Add in any user secrets associated with the (implicit) `Program` class as well as environment variables, and then validate the configuration.
 6. In `Program.cs`, add a singleton of type `Microsoft.SemanticKernel.Kernel`. It should create an `IKernelBuilder` and then add Azure OpenAI chat completion, using the deployment name, endpoint, and API key from your configuration. It should also add as a plugin everything in the `DatabaseService` class.
 7. Implement the `/Chat` POST request. It should use the `Kernel` singleton and get chat message content from the chat completion service. Return to the end user `response?.Content!`.
-8. Run the Web API project and ensure that things work correctly. You can perform a simple test in PowerShell using the following request.
+8. Run the Web API project and ensure that things work correctly. If you are using GitHub Codespaces, run the following command:
+
+   ```bash
+   curl -d 'message="Which bookings do not currently have hotel rooms associated with them?"' http://localhost:5292/Chat
+   ```
+
+   You can alternatively perform a simple test in PowerShell using the following request.
 
     ```powershell
     $postParams = @{ message="Which bookings do not currently have hotel rooms associated with them?" }
@@ -82,6 +88,13 @@ The key tasks are as follows:
   dotnet user-secrets set "AzureOpenAI:DeploymentName" "gpt-4o"
   dotnet user-secrets set "AzureOpenAI:Endpoint" "{your_endpoint}"
   dotnet user-secrets set "AzureOpenAI:ApiKey" "{your_key}"
+  ```
+
+- The new code for the `IDatabaseService` interface is as follows:
+
+  ```csharp
+  Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms();
+  Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms();
   ```
 
 - The code for the `GetBookingsMissingHotelRooms()` method is in the `DatabaseService` class as follows:
