--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0301.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0301.md
@@ -85,4 +85,7 @@ The key tasks are as follows:
       - Index type: Select **diskANN**. Given the number of dimensions being specified, 1536, the `flat` index type will not work, as it only supports a maximum of 505 dimensions for vectors. The `quantizedFlat` index could also be used here. `diskANN` is a more efficient index type, but given the amount of data we are working with in this lab, you likely will not notice any difference in performance.
     - Select **OK** to create the container.
 
+  {: .note }
+  > If you receive an error message that "A Container Vector Policy has been provided, but the capability has not been enabled on your account," wait another 5-10 minutes before trying again.
+
 </details>
